--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,12 @@ a, body, div, form, html, img, input, label, p, span {
 
 body, html {
   min-height: 100%;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 
 body {
   background-image: url('../img/bg.svg');
-  background-position: center;
+  background-position: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   /* background: rgb(36,176,255);
@@ -60,13 +60,6 @@ p::first-letter {
   left: 0;
   margin-top: 13px;
   margin-left: 14px
-}
-
-
-h1 {
-  text-align: center;
-  color: #fff;
-  font-size: 24px !important
 }
 
 * {
@@ -233,25 +226,27 @@ table td:first-child {
 
 .link{
   color: rgb(0, 102, 255);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
-
-input[type=submit]:focus, input[type=submit]:hover {
-  background: #022cc6d7;
+.link:visited{
+  color: rgb(0, 102, 255);
 }
 
-input[type=submit] {
-  background: #022dc6;
-  color: #fff;
+.btn{
+
+  border-radius: 5px;
+  padding: 10px;
   border: 0;
-  cursor: pointer;
-  text-align: center;
   width: 100%;
-  height: 44px;
-  border-radius: 6px;
-  -webkit-transition: background .3s ease-in-out;
-  transition: background .3s ease-in-out
+  cursor: pointer;
+}
+
+.btn-success {
+  background-color: rgb(0, 102, 255);
+  color: #fff;
+}
+
 }
 
 .logo-container{
@@ -303,67 +298,98 @@ input[type=submit] {
   height: 100px;
 }
 
-.noticias{
-  margin-top: 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
 
-.noticias-header{
-  padding: 12px;
-  margin-block: 24px;
-  background-color: rgba(255, 255, 255, 0.863);
-  border-radius: 12px;
-}
 
-.noticias-header h1 {
-  font-size: 32px;
+/* ---- */
+
+.heading-1{
+  font-size: 2rem;
   font-weight: bold;
-  color: #5c5c5c;
 }
+
+.heading-2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.heading-3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.heading-4 {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.text-primary-600 {
+  color: #022dc6;
+}
+
+.text-primary-500{
+  color: #022dc6;
+}
+
+.text-primary-400{
+  color: #2c58f7;
+}
+
+.text-primary-300{
+  color: #5d80ff;
+}
+
+.text-black {
+  color: #202020;
+}
+
+.text-center{
+  text-align: center;
+}
+
 
 .card{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 12px;
   background-color: #ffffff;
   margin-bottom: 12px;
   margin-inline: 4px;
   border-radius: 12px;
 }
 
-.noticia-heading{
-  font-size: 22px;
-  color: #022dc6;
-  font-weight: bold;
-  margin-bottom: 12px;
+@media screen and (min-width: 768px) {
+  .card{
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 12px;
+  }
+
+  .card-img{
+    width: 100%;
+    height: 300px;
+    border-radius: 12px 12px 0px 0px;
+  }
+
 }
 
-.noticia-desc {
-  font-size: 14px;
-  color: #222222;
-  margin-bottom: 12px;
+.card-content{
+  padding: 12px;
   text-align: center;
 }
 
-.card-ig{
-  background: red;
-  flex: auto;
-  width: 75%;
-  align-items: center;
-  justify-content: center;
+.card-img{
+  width: 100%;
+  height: 300px;
+  border-radius: 12px 12px 0px 0px;
 }
 
-.card-body{
+.padding-12{
+  padding: 12px;
+}
+
+.padding-4 {
+  padding: 4px;
+}
+
+footer{
+  background-color: white;
+  padding: 12px;
   text-align: center;
-}
-
-.card-body p {
-  font-size: 16px;
 }
