--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,6 @@ table td:first-child {
 }
 
 .btn{
-
   border-radius: 5px;
   padding: 10px;
   border: 0;
@@ -242,11 +241,13 @@ table td:first-child {
   cursor: pointer;
 }
 
+.btn:hover{
+  opacity: .85;
+}
+
 .btn-success {
   background-color: rgb(0, 102, 255);
   color: #fff;
-}
-
 }
 
 .logo-container{
